--- a/UniGraphics/Help/AnimationsHelp.xaml
+++ b/UniGraphics/Help/AnimationsHelp.xaml
@@ -10,7 +10,7 @@
       Title="AnimationsHelp">
     <Grid>
         <ScrollViewer>
-            <StackPanel Margin="10,0,10,0" Height="1000">
+            <StackPanel Margin="10,0,10,0">
                 <Label 
                     FontStyle ="Italic" 
                     Foreground="#99A2F1" 
@@ -22,6 +22,8 @@
                     Width="186" 
                     RenderTransformOrigin="0.5,0.516"/>
                 <TextBlock
+                    Visibility="Collapsed"
+                    Name="InputDataBlock"
                     Foreground="Black"
                     FontSize="16"
                     TextWrapping="Wrap"
@@ -44,6 +46,8 @@
                         <LineBreak/>
                 </TextBlock>
                 <TextBlock
+                    Visibility="Collapsed"
+                    Name="ScalingBlock"
                     Foreground="Black" 
                     FontSize="16"
                     TextWrapping="Wrap"
@@ -57,6 +61,8 @@
                     <LineBreak/>
                 </TextBlock>
                 <TextBlock
+                    Visibility="Collapsed"
+                    Name="SpecialWorkBlock"
                     Foreground="Black" 
                     FontSize="16"
                     TextWrapping="Wrap"
